[project]
name = "llm-cmds"
version = "0.1a0"
description = "Fork of llm-cmd that also includes chain of thought reasoning, user environment context, and more"
readme = "README.md"
authors = [{name = "fractalcounty"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "prompt_toolkit>=3.0.43",
    "pygments>=2.17.2",
]

[project.urls]
Homepage = "https://github.com/fractalcounty/llm-cmds"
Changelog = "https://github.com/fractalcounty/llm-cmds/releases"
Issues = "https://github.com/fractalcounty/llm-cmds/issues"
CI = "https://github.com/fractalcounty/llm-cmds/actions"

[project.entry-points.llm]
cmd = "llm_smart_cmd"

[project.optional-dependencies]
test = ["pytest"]

